Minor changes to images

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="col-md-6 col-lg-4"><a class="d-block mx-auto portfolio-item" href="#portfolio-modal-1" data-bs-toggle="modal">
                         <div class="d-flex portfolio-item-caption position-absolute h-100 w-100">
                             <div class="text-center text-white my-auto portfolio-item-caption-content w-100"><i class="fa fa-search-plus fa-3x"></i></div>
-                        </div><img class="img-fluid" src="assets/img/portfolio/placeholder.png">
+                        </div><img class="img-fluid" src="assets/img/portfolio/Screenshot_1.png">
                     </a></div>
                 <div class="col-md-6 col-lg-4"><a class="d-block mx-auto portfolio-item" href="#portfolio-modal-2" data-bs-toggle="modal">
                         <div class="d-flex portfolio-item-caption position-absolute h-100 w-100">
@@ -111,9 +111,10 @@
                     <div class="container text-center">
                         <div class="row">
                             <div class="col-lg-8 mx-auto">
-                                <h2 class="text-uppercase text-secondary mb-0">Project Name</h2>
-                                <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/placeholder.png">
-                                <p class="mb-5">Please excuse the mess, this is under construction and I haven't yet added all of my projects. Please come back soon to check it out!</p>
+                                <h2 class="text-uppercase text-secondary mb-0">Pokesearch</h2>
+                                <hr class="star-dark mb-5"><img class="img-fluid mb-5" src="assets/img/portfolio/Screenshot_1.png">
+                                <span><a href="https://pokesearcher.netlify.app/" target="_blank"><h2>Pokesearch</h2></a></span>
+                                <p class="mb-5">A simple pokemon search app built using HTML, CSS, Boostrap and Javascript. This was both one of my first projects with Javascript, as well as with using API's. It's not the prettiest thing in the world, but I learned a lot working on it. Click the link for a live demo.</p>
                             </div>
                         </div>
                     </div>
