Adding Express to stack

--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
                     <img src="/assets/img/icons/html5.png">
                     <img src="/assets/img/icons/css3.png">
                     <img src="/assets/img/icons/javascript.png">
-                    <img src="/assets/img/icons/node-js.png">
-                    <img src="/assets/img/icons/react.png">
                     <img src="/assets/img/icons/postgresql.png">
                     <img src="/assets/img/icons/mongodb.png">
+                    <img src="/assets/img/icons/express.png" width="128" height="128">
+                    <img src="/assets/img/icons/react.png">
+                    <img src="/assets/img/icons/node-js.png">
                 </p>
             </div>
         </div>
