--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <img src="/assets/img/icons/mongodb.png">
                     <img src="/assets/img/icons/express.png" width="128" height="128">
                     <img src="/assets/img/icons/react.png">
-                    <img src="/assets/img/icons/node-js.png">
+                    <img src="/assets/img/icons/node-js.png" width="128" height="128">
                 </p>
             </div>
         </div>
